Add 'Convert Another Video' button to output section - Improves user workflow and provides easy reset functionality

--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
                             <i class="fas fa-download drone-m-2"></i>
                             Download Animated GIF
                         </button>
+                        <button id="convertAnotherBtn" class="drone-btn drone-btn--secondary drone-btn--lg drone-m-4">
+                            <i class="fas fa-redo drone-m-2"></i>
+                            Convert Another Video
+                        </button>
                     </div>
                 </div>
             </div>
