Add Agoda logo to header - Replace version pill with branded Agoda ADS Drone logo in top right

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
                         <p class="drone-text--sm drone-text--neutral drone-m-0">Powered by ADS Drone Design System</p>
                     </div>
                 </div>
-                <div class="drone-version drone-bg--primary drone-text--primary drone-p-2" style="border-radius: var(--drone-radius-full); font-size: var(--drone-font-size-xs); font-weight: var(--drone-font-weight-medium);">
-                    v2.0 - Drone UI
+                <div class="agoda-logo drone-m-4">
+                    <svg width="120" height="32" viewBox="0 0 120 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- Agoda Logo - Brand Colors -->
+                        <rect x="4" y="8" width="112" height="16" rx="8" fill="#E53E3E"/>
+                        <text x="60" y="20" text-anchor="middle" fill="white" font-family="Inter, Arial, sans-serif" font-size="12" font-weight="700" letter-spacing="0.5px">AGODA</text>
+                        <text x="60" y="28" text-anchor="middle" fill="#E53E3E" font-family="Inter, Arial, sans-serif" font-size="8" font-weight="600" letter-spacing="0.3px">ADS DRONE</text>
+                    </svg>
                 </div>
             </div>
         </div>
