Update header to use actual Agoda logo PNG - Replace SVG placeholder with real Agoda_logo_2019.svg.png file

--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
                     </div>
                 </div>
                 <div class="agoda-logo drone-m-4">
-                    <svg width="120" height="32" viewBox="0 0 120 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <!-- Agoda Logo - Brand Colors -->
-                        <rect x="4" y="8" width="112" height="16" rx="8" fill="#E53E3E"/>
-                        <text x="60" y="20" text-anchor="middle" fill="white" font-family="Inter, Arial, sans-serif" font-size="12" font-weight="700" letter-spacing="0.5px">AGODA</text>
-                        <text x="60" y="28" text-anchor="middle" fill="#E53E3E" font-family="Inter, Arial, sans-serif" font-size="8" font-weight="600" letter-spacing="0.3px">ADS DRONE</text>
-                    </svg>
+                    <img src="Agoda_logo_2019.svg.png" alt="Agoda Logo" class="agoda-logo-img">
                 </div>
             </div>
         </div>
