--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
                 <div class="agoda-logo drone-m-4">
-                    <img src="Agoda_logo_2019.svg.png" alt="Agoda Logo" class="agoda-logo-img">
+                    <img src="_images/Agoda_logo_2019.png" alt="Agoda Logo" class="agoda-logo-img">
                 </div>
             </div>
         </div>
